# hls-science-container

./: .dockerignore  .gitignore  Dockerfile  README.md  pixi.toml  pyproject.toml
.github/actions/free-disk-space/: action.yml
.github/workflows/: build_push_pr_ecr.yml  build_push_release_ecr.yml
patches/: espa-product-formatter-std-gnu90.patch
scripts/: build  format  lint  plot_metrics.py  shell  test  typecheck
scripts/ci/: build-and-publish.sh  determine-targets.py  local-build.sh
src/hls-libs/: Makefile
src/hls-libs/common/: hls_commondef.h  s2ang.c
src/hls-libs/landsat-add-fmask-sds/: Makefile
src/hls-libs/sentinel-add-fmask-sds/: Makefile  addFmaskSDS.c
src/hls-libs/sentinel-consolidate/: Makefile
src/hls-libs/sentinel-consolidate-angle/: Makefile
src/hls-libs/sentinel-create-s2at30m/: Makefile
src/hls-libs/sentinel-derive-angle/: Makefile
src/hls-libs/sentinel-derive-nbar/: Makefile
src/hls-libs/sentinel-l8-like/: Makefile
src/hls-libs/sentinel-trim/: Makefile
src/hls-libs/sentinel-twohdf2one/: Makefile
src/hls-nextgen-orchestration/: README.md  pyproject.toml
src/hls-nextgen-orchestration/src/hls_nextgen_orchestration/: __init__.py  base.py  constants.py  granules.py  metrics.py  pipeline.py  utils.py  version.py
src/hls-nextgen-orchestration/src/hls_nextgen_orchestration/common/: __init__.py  assets.py  commands.py
src/hls-nextgen-orchestration/src/hls_nextgen_orchestration/landsat_ac/: assets.py  tasks.py  workflow.py
src/hls-nextgen-orchestration/src/hls_nextgen_orchestration/landsat_tile/: assets.py  tasks.py  workflow.py
src/hls-nextgen-orchestration/src/hls_nextgen_orchestration/sentinel/: assets.py  mapped_tasks.py  tasks.py  workflow.py
src/hls-nextgen-orchestration/tests/: conftest.py  mock_cli.py  test_base.py  test_granules.py  test_metrics.py  test_pipeline.py
src/hls-nextgen-orchestration/tests/landsat_ac/: conftest.py  test_tasks.py  test_workflow.py
src/hls-nextgen-orchestration/tests/landsat_tile/: conftest.py  test_tasks.py  test_workflow.py
src/hls-nextgen-orchestration/tests/sentinel/: conftest.py  test_mapped_tasks.py  test_tasks.py  test_workflow.py
src/scripts/: landsat-tile.sh  landsat.sh  sentinel.sh  sentinel_granule.sh
