[project]
name = "hls-atmospheric-correction"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "ruff>=0.14.8",
]

[tool.ruff]
include = ["packages/**/*.py", "packages/**/*.pyi"]

[tool.ruff.lint.isort]
known-first-party = [
  "hls_utilities"
]

[tool.pixi.workspace]
name = "hls-atmospheric-correction"
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
hls-atmospheric-correction = { path = ".", editable = true }

[tool.uv.workspace]
members = [
    "packages/hls-browse-imagery",
]
