[project]
name = "hls-nextgen-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Holden", email = "ceholden@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hls-nextgen-orchestration = "hls_nextgen_orchestration:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.36.0",
    "moto[s3]>=5.0.0",
    "mypy>=1.14.0",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["hls_nextgen_orchestration"]

[tool.mypy]
strict = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
hls-nextgen-orchestration = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
